responsive errr fixed

--- a/about-us.html
+++ b/about-us.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width height=device-height initial-scale=1.0 maximum-scale=1.0 user-scalable=0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8">
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="images/whiteshadow.jpg" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Work+Sans:300,400,500,700,800%7CPoppins:300,400,700">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/fonts.css">
@@ -39,7 +39,8 @@
                 <div class="rd-navbar-panel">
                   <!-- RD Navbar Toggle-->
                   <button class="rd-navbar-toggle" data-rd-navbar-toggle="#rd-navbar-nav-wrap-1"><span></span></button>
-                  <!-- RD Navbar Brand--><a class="rd-navbar-brand" href="index.html"><img src="images/logo-default-151x44.png" alt="" width="151" height="44" srcset="images/logo-default-151x44.png 2x"/></a>
+                  <!-- RD Navbar Brand-->
+                  <a class="rd-navbar-brand" href="index.html"><img src="images/whiteshadow.jpg" alt="" width="151" height="44" srcset="images/whiteshadow.jpg 2x"/></a>
                 </div>
                 <div class="rd-navbar-collapse">
                   <button class="rd-navbar-collapse-toggle rd-navbar-fixed-element-1" data-rd-navbar-toggle="#rd-navbar-collapse-content-1"><span></span></button>
@@ -48,14 +49,16 @@
                       <div class="unit-left"><span class="icon novi-icon icon-md icon-modern mdi mdi-phone"></span></div>
                       <div class="unit-body">
                         <ul class="list-0">
-                          <li><a class="link-default" href="tel:#">1-800-1234-567</a></li>
-                          <li><a class="link-default" href="tel:#">1-800-8763-765</a></li>
+                          <li><a class="link-default" href="tel:+91 9906531735"> +91 9906531735</a></li>
+                        <li><a class="link-default" href="tel:+91 9149593722">+91 9149593722 </a></li>
+                      </ul>
                         </ul>
                       </div>
                     </article>
                     <article class="unit align-items-center">
                       <div class="unit-left"><span class="icon novi-icon icon-md icon-modern mdi mdi-map-marker"></span></div>
-                      <div class="unit-body"><a class="link-default" href="tel:#">2130 Fulton Street <br> San Diego, CA 94117-1080</a></div>
+                      <div class="unit-body"><a class="link-default" href="tel:#">7 Square Mall <br> Hyderpora, Srinagar
+                      </a></div>
                     </article><a class="button button-gray-bordered button-winona" href="#">Request a call</a>
                   </div>
                 </div>
@@ -66,11 +69,11 @@
                 <div class="rd-navbar-nav-wrap" id="rd-navbar-nav-wrap-1">
                   <!-- RD Navbar Nav-->
                   <ul class="rd-navbar-nav">
-                    <li class="rd-nav-item"><a class="rd-nav-link" href="index.html">Home</a>
+                    <li class="rd-nav-item"><a class="rd-nav-link" href="/">Home</a>
                     </li>
                     <li class="rd-nav-item active"><a class="rd-nav-link" href="about-us.html">About us</a>
                     </li>
-                    <li class="rd-nav-item"><a class="rd-nav-link" href="typography.html">Typography</a>
+                    <li class="rd-nav-item"><a class="rd-nav-link" href="our-services.html">Services</a>
                     </li>
                     <li class="rd-nav-item"><a class="rd-nav-link" href="contacts.html">Contacts</a>
                     </li>
@@ -82,7 +85,7 @@
         </div>
       </header>
       <!-- Breadcrumbs -->
-      <section class="section novi-background breadcrumbs-custom bg-image context-dark" style="background-image: url(/images/breadcrumbs-image-1.jpg);">
+      <section class="section novi-background breadcrumbs-custom bg-image context-dark" style="background-image: url(/images/service.png);">
         <div class="breadcrumbs-custom-inner">
           <div class="container breadcrumbs-custom-container">
             <div class="breadcrumbs-custom-main">
@@ -101,12 +104,13 @@
         <div class="inner-container">
           <h1>About Us</h1>
           <p class="text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus velit ducimus, enim inventore earum, eligendi nostrum pariatur necessitatibus eius dicta a voluptates sit deleniti autem error eos totam nisi neque voluptates sit deleniti autem error eos totam nisi neque.
+            We are committed to delivering measurable and impactful results that align with your business goals. Our strategies are data-driven, innovative, and tailored to your specific needs.With extensive experience across various sectors, we understand the unique challenges and opportunities your industry faces. Our knowledge and insights enable us to develop targeted campaigns that resonate with your audience.We believe in the power of creativity to break through the clutter and captivate audiences. Our team of talented creatives will bring fresh ideas and innovative approaches to your campaigns.
           </p>
           <div class="skills">
-            <span>Web Design</span>
-            <span>Photoshop </span>
-            <span>Coding</span>
+            <span>Content Creation</span>
+            <span>Media
+              Realtion </span>
+            <span>Social Media Management</span>
           </div>
         </div>
       </div>
@@ -127,7 +131,8 @@
       <section class="section novi-background section-md text-center bg-gray-100">
         <div class="container">
           <h3 class="text-uppercase wow-outer"><span class="wow slideInUp">Why people Choose Us</span></h3>
-          <p class="wow-outer"><span class="text-width-1 wow slideInDown">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</span></p>
+          <p class="wow-outer"><span class="text-width-1 wow slideInDown">What sets our agency apart is our commitment to delivering results-driven campaigns tailored to meet the unique goals and visions of each and every client. We 🌟
+            understand that effective communication is key to success, and we are here to help you amplify your message and leave a lasting impression.</span></p>
           <div class="row row-50">
             <div class="col-6 col-md-3 wow-outer">
               <!-- Counter Minimal-->
@@ -136,7 +141,7 @@
                 <div class="counter-minimal-main">
                   <div class="counter">12</div>
                 </div>
-                <h5 class="counter-minimal-title">National Partners</h5>
+                <h5 class="counter-minimal-title">Experineces Staff</h5>
               </article>
             </div>
             <div class="col-6 col-md-3 wow-outer">
@@ -146,7 +151,7 @@
                 <div class="counter-minimal-main">
                   <div class="counter">238</div>
                 </div>
-                <h5 class="counter-minimal-title">Properties</h5>
+                <h5 class="counter-minimal-title">Esteemed Clients</h5>
               </article>
             </div>
             <div class="col-6 col-md-3 wow-outer">
@@ -154,7 +159,7 @@
               <article class="counter-minimal wow slideInUp" data-wow-delay=".1s">
                 <div class="counter-minimal-icon box-chloe__icon novi-icon linearicons-star"></div>
                 <div class="counter-minimal-main">
-                  <div class="counter">19</div>
+                  <div class="counter">1</div>
                 </div>
                 <h5 class="counter-minimal-title">Years of Experience</h5>
               </article>
@@ -166,7 +171,7 @@
                 <div class="counter-minimal-main">
                   <div class="counter">54</div>
                 </div>
-                <h5 class="counter-minimal-title">Qualified Brokers</h5>
+                <h5 class="counter-minimal-title">Projects Completed</h5>
               </article>
             </div>
           </div>
@@ -182,12 +187,12 @@
                 <figure class="profile-creative-figure"><img class="profile-creative-image" src="images/team-1-270x273.jpg" alt="" width="270" height="273"/>
                 </figure>
                 <div class="profile-creative-main">
-                  <h5 class="profile-creative-title"><a href="#">Nathalie Porter</a></h5>
-                  <p class="profile-creative-position">Founder, Broker</p>
+                  <h5 class="profile-creative-title"><a href="#">Mohd Amaan</a></h5>
+                  <p class="profile-creative-position">Founder, White Shadow</p>
                   <div class="profile-creative-contacts">
                     <div class="object-inline"><span class="icon novi-icon icon-md mdi mdi-phone"></span><a href="tel:#">1-800-1324-567</a></div>
                   </div>
-                  <p>Ms. Porter founded our company in 1989 with a vision to help guests and residents of the USA to easily find and buy or rent real estate in all 50 states.</p>
+                  <p>Mohd Amaan founded our company in 1989 with a vision to help guests and residents of the USA to easily find and buy or rent real estate in all 50 states.</p>
                 </div>
               </article>
             </div>
@@ -298,10 +303,10 @@
                   <div class="footer-advanced-layout">
                     <div>
                       <ul class="list-nav"> 
-                        <li><a href="index.html">Home</a></li>
+                        <li><a href="/">Home</a></li>
                         <li><a href="about-us.html">About</a></li>
-                        <li><a href="#">Properties</a></li>
-                        <li><a href="#">Blog</a></li>
+                        <li><a href="our-services.html">Services</a></li>
+                        <!-- <li><a href="#">Blog</a></li> -->
                         <li><a href="contacts.html">Contacts</a></li>
                       </ul>
                     </div>
@@ -322,9 +327,9 @@
               </div>
               <div class="footer-advanced-aside">
                 <div class="container">
-                  <div class="footer-advanced-layout"><a class="brand" href="index.html"><img src="images/logo-light-115x34.png" alt="" width="115" height="34" srcset="images/logo-light-115x34.png 2x"/></a>
+                  <div class="footer-advanced-layout"><a class="brand" href="index.html"><img src="images/whiteshadow.jpg" alt="" width="115" height="34" srcset="images/whiteshadow.jpg 2x"/></a>
                     <!-- Rights-->
-                    <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span>. All Rights Reserved. Design by <a href="https://www.templatemonster.com">TemplateMonster</a></p>
+                    <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span>. All Rights Reserved. Design by <a href="#">Azhar Ahmad</a></p>
                   </div>
                 </div>
               </div>
