--- a/contacts.html
+++ b/contacts.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width height=device-height initial-scale=1.0 maximum-scale=1.0 user-scalable=0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8">
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="images/whiteshadow.jpg" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Work+Sans:300,400,500,700,800%7CPoppins:300,400,700">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/fonts.css">
@@ -16,7 +16,7 @@
   <body>
     <!-- <div class="ie-panel"><a href="http://windows.microsoft.com/en-US/internet-explorer/"><img src="images/ie8-panel/warning_bar_0000_us.jpg" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today."></a></div> -->
     <div class="preloader">
-      <div class="preloader-logo"><img src="images/logo-default-151x44.png" alt="" width="151" height="44" srcset="images/logo-default-151x44.png 2x"/>
+      <div class="preloader-logo"><img src="images/whiteshadow.jpg" alt="" width="151" height="44" srcset="images/whiteshadow.jpg 2x"/>
       </div>
       <div class="preloader-body">
         <div id="loadingProgressG">
@@ -37,7 +37,7 @@
                 <div class="rd-navbar-panel">
                   <!-- RD Navbar Toggle-->
                   <button class="rd-navbar-toggle" data-rd-navbar-toggle="#rd-navbar-nav-wrap-1"><span></span></button>
-                  <!-- RD Navbar Brand--><a class="rd-navbar-brand" href="index.html"><img src="images/logo-default-151x44.png" alt="" width="151" height="44" srcset="images/logo-default-151x44.png 2x"/></a>
+                  <!-- RD Navbar Brand--><a class="rd-navbar-brand" href="index.html"><img src="images/whiteshadow.jpg" alt="" width="151" height="44" srcset="images/whiteshadow.jpg 2x"/></a>
                 </div>
                 <div class="rd-navbar-collapse">
                   <button class="rd-navbar-collapse-toggle rd-navbar-fixed-element-1" data-rd-navbar-toggle="#rd-navbar-collapse-content-1"><span></span></button>
@@ -46,14 +46,17 @@
                       <div class="unit-left"><span class="icon novi-icon icon-md icon-modern mdi mdi-phone"></span></div>
                       <div class="unit-body">
                         <ul class="list-0">
-                          <li><a class="link-default" href="tel:#">1-800-1234-567</a></li>
-                          <li><a class="link-default" href="tel:#">1-800-8763-765</a></li>
+                          <li><a class="link-default" href="tel:+91 9906531735"> +91 9906531735</a></li>
+                        <li><a class="link-default" href="tel:+91 9149593722">+91 9149593722 </a></li>
                         </ul>
                       </div>
                     </article>
                     <article class="unit align-items-center">
                       <div class="unit-left"><span class="icon novi-icon icon-md icon-modern mdi mdi-map-marker"></span></div>
-                      <div class="unit-body"><a class="link-default" href="tel:#">2130 Fulton Street <br> San Diego, CA 94117-1080</a></div>
+                      <div class="unit-body"><a class="link-default" href="tel:#">7 Square Mall <br> Hyderpora, Srinagar
+                      </a></div>
+                      <!-- <div class="unit-left"><span class="icon novi-icon icon-md icon-modern mdi mdi-map-marker"></span></div> -->
+                      <!-- <div class="unit-body"><a class="link-default" href="tel:#">2130 Fulton Street <br> San Diego, CA 94117-1080</a></div> -->
                     </article><a class="button button-gray-bordered button-winona" href="#">Request a call</a>
                   </div>
                 </div>
@@ -68,7 +71,7 @@
                     </li>
                     <li class="rd-nav-item"><a class="rd-nav-link" href="about-us.html">About us</a>
                     </li>
-                    <li class="rd-nav-item"><a class="rd-nav-link" href="typography.html">Typography</a>
+                    <li class="rd-nav-item"><a class="rd-nav-link" href="typography.html">Services</a>
                     </li>
                     <li class="rd-nav-item active"><a class="rd-nav-link" href="contacts.html">Contacts</a>
                     </li>
@@ -80,7 +83,7 @@
         </div>
       </header>
       <!-- Breadcrumbs -->
-      <section class="section novi-background breadcrumbs-custom bg-image context-dark" style="background-image: url(images/breadcrumbs-image-1.jpg);">
+      <section class="section novi-background breadcrumbs-custom bg-image context-dark" style="background-image: url(images/bing.jpeg);">
         <div class="breadcrumbs-custom-inner">
           <div class="container breadcrumbs-custom-container">
             <div class="breadcrumbs-custom-main">
@@ -101,19 +104,22 @@
               <div class="layout-bordered-item-inner wow slideInUp">
                 <div class="icon novi-icon icon-lg mdi mdi-phone text-primary"></div>
                 <ul class="list-0">
-                  <li><a class="link-default" href="tel:#">1-800-1234-678</a></li>
-                  <li><a class="link-default" href="tel:#">1-800-9876-098</a></li>
+                  <li><a class="link-default" href="tel:+91 9906531735"> +91 9906531735</a></li>
+                        <li><a class="link-default" href="tel:+91 9149593722">+91 9149593722 </a></li>
+                      </ul>
                 </ul>
               </div>
             </div>
             <div class="layout-bordered-item wow-outer">
               <div class="layout-bordered-item-inner wow slideInUp">
-                <div class="icon novi-icon icon-lg mdi mdi-email text-primary"></div><a class="link-default" href="mailto:#">info@demolink.org</a>
+                <div class="icon novi-icon icon-lg mdi mdi-email text-primary"></div><a class="link-default" href="mailto:Mohmmad.amaan2@yahoo.in">Mohmmad.amaan2@yahoo.in</a>
               </div>
             </div>
             <div class="layout-bordered-item wow-outer">
               <div class="layout-bordered-item-inner wow slideInUp">
-                <div class="icon novi-icon icon-lg mdi mdi-map-marker text-primary"></div><a class="link-default" href="#">2130 Fulton Street San Diego, CA 94117-1080 USA</a>
+                <!-- <div class="unit-body"><a class="link-default" href="tel:#">7 Square Mall <br> Hyderpora, Srinagar
+                </a></div> -->
+                <div class="icon novi-icon icon-lg mdi mdi-map-marker text-primary"></div><a class="link-default" href="#"> 7 Square Mall, Hyderpora, Srinagar </a>
               </div>
             </div>
           </div>
@@ -240,10 +246,10 @@
                   <div class="footer-advanced-layout">
                     <div>
                       <ul class="list-nav"> 
-                        <li><a href="index.html">Home</a></li>
+                        <li><a href="/">Home</a></li>
                         <li><a href="about-us.html">About</a></li>
-                        <li><a href="#">Properties</a></li>
-                        <li><a href="#">Blog</a></li>
+                        <li><a href="our-services.html">Services</a></li>
+                        <!-- <li><a href="#">Blog</a></li> -->
                         <li><a href="contacts.html">Contacts</a></li>
                       </ul>
                     </div>
@@ -264,9 +270,9 @@
               </div>
               <div class="footer-advanced-aside">
                 <div class="container">
-                  <div class="footer-advanced-layout"><a class="brand" href="index.html"><img src="images/logo-light-115x34.png" alt="" width="115" height="34" srcset="images/logo-light-115x34.png 2x"/></a>
+                  <div class="footer-advanced-layout"><a class="brand" href="index.html"><img src="images/whiteshadow.jpg" alt="" width="115" height="34" srcset="images/whiteshadow.jpg 2x"/></a>
                     <!-- Rights-->
-                    <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span>. All Rights Reserved. Design by <a href="https://www.templatemonster.com">TemplateMonster</a></p>
+                    <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span>. All Rights Reserved. Design by <a href="#">Azhar Ahmad</a></p>
                   </div>
                 </div>
               </div>
