--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Home</title>
-  <meta name="format-detection" content="telephone=no">
+  <!-- <meta name="format-detection" content="telephone=no"> -->
   <meta name="viewport"
     content="width=device-width height=device-height initial-scale=1.0 maximum-scale=1.0 user-scalable=0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -424,7 +424,7 @@ button:hover,
 
 
 
-    <section class="section novi-background section-md text-center">
+    <!-- <section class="section novi-background section-md text-center"> -->
 
 
 
@@ -577,7 +577,7 @@ button:hover,
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         <div class="project-btns">
           <button>Live</button>
-          <!-- <button>Code</button> -->
+          
         </div>
       </div>
     </div>
