--- a/our-services.html
+++ b/our-services.html
@@ -15,10 +15,10 @@
     <style>
       
       /* Fonts */
-@import url(https://fonts.googleapis.com/css?family=Lato:300,400,700);
+/* @import url(https://fonts.googleapis.com/css?family=Lato:300,400,700); */
 
 /* icons */
-@import url(http://weloveiconfonts.com/api/?family=iconicfill);
+/* @import url(http://weloveiconfonts.com/api/?family=iconicfill); */
 
 
 
@@ -26,12 +26,12 @@
 
 
 
-* { margin: 0; padding: 0; box-sizing: border-box; position: relative; }
+/* * { margin: 0; padding: 0; box-sizing: border-box; position: relative; } */
 
 
 body {
   background: #f7f7f7;
-  color: #fff;
+  /* color: #fff; */
   font: 400 87.5%/1.5em 'Lato', sans-serif !important;
 }
 
@@ -219,7 +219,7 @@ body {
                 <div class="rd-navbar-panel">
                   <!-- RD Navbar Toggle-->
                   <button class="rd-navbar-toggle" data-rd-navbar-toggle="#rd-navbar-nav-wrap-1"><span></span></button>
-                  <!-- RD Navbar Brand--><a class="rd-navbar-brand" href="index.html"><img src="images/whiteshadow.jpg" alt="" width="151" height="44" srcset="images/logo-default-151x44.png 2x"/></a>
+                  <!-- RD Navbar Brand--><a class="rd-navbar-brand" href="/"><img src="images/whiteshadow.jpg" alt="" width="151" height="44" srcset="images/logo-default-151x44.png 2x"/></a>
                 </div>
                 <div class="rd-navbar-collapse">
                   <button class="rd-navbar-collapse-toggle rd-navbar-fixed-element-1" data-rd-navbar-toggle="#rd-navbar-collapse-content-1"><span></span></button>
@@ -252,7 +252,7 @@ body {
                     </li>
                     <li class="rd-nav-item"><a class="rd-nav-link" href="about-us.html">About us</a>
                     </li>
-                    <li class="rd-nav-item active"><a class="rd-nav-link" href="typography.html">Services</a>
+                    <li class="rd-nav-item active"><a class="rd-nav-link" href="our-services.html">Services</a>
                     </li>
                     <li class="rd-nav-item"><a class="rd-nav-link" href="contacts.html">Contacts</a>
                     </li>
@@ -272,7 +272,7 @@ body {
               <h2 class="text-uppercase breadcrumbs-custom-title">Services</h2>
             </div>
             <ul class="breadcrumbs-custom-path">
-              <li><a href="index.html">Home</a></li>
+              <li><a href="/">Home</a></li>
               <li class="active">Services</li>
             </ul>
           </div>
@@ -311,63 +311,63 @@ body {
             <div class="col-lg-12">
               <div class="owl-carousel owl-services">
                 <div class="item">
-                  <h4>Learn More about our Guidelines</h4>
+                  <h4>Audio / Video Production.</h4>
                   <div class="icon"><img src="images/service-icon-01.png" alt=""></div>
-                  <p>Feel free to use this template for your business</p>
+                  <p>Complete Ad shoot and Ad's management on all the media platforms.</p>
                 </div>
                 <div class="item">
-                  <h4>Develop The Best Strategy for Business</h4>
+                  <h4>Social Media Set-up & Management.</h4>
                   <div class="icon"><img src="images/service-icon-02.png" alt=""></div>
-                  <p style="color: black">Get to know more about the topic in details</p>
+                  <p style="color: black">White Shadow helps you in setting up your Social/Cloud Image on all me the media platforms.</p>
                 </div>
                 <div class="item">
-                  <h4>UI / UX Design and Development</h4>
+                  <h4>Designing / Editing & Printing.</h4>
                   <div class="icon"><img src="images/service-icon-03.png" alt=""></div>
-                  <p style="color: black;">Get to know more about the topic in details</p>
+                  <p style="color: black;">Our creative team will be handling and creating the daily posts to keep the audience occupied.</p>
                 </div>
                 <div class="item">
-                  <h4>Discover &amp; Explore our SEO Tips</h4>
+                  <h4>E - Commerce.</h4>
                   <div class="icon"><img src="images/service-icon-04.png" alt=""></div>
                   <p style="color: black;">Feel free to use this template for your business</p>
                 </div>
                 <div class="item">
-                  <h4>Optimizing your websites for Speed</h4>
+                  <h4>Finance and Banking.</h4>
                   <div class="icon"><img src="images/service-icon-01.png" alt=""></div>
                   <p style="color: black;">Get to know more about the topic in details</p>
                 </div>
                 <div class="item">
-                  <h4>See The Strategy In The Market</h4>
+                  <h4>Hospitality & Travel.</h4>
                   <div class="icon"><img src="images/service-icon-02.png" alt=""></div>
                   <p style="color: black;">Get to know more about the topic in details</p>
                 </div>
                 <div class="item">
-                  <h4>Best Content Ideas for your pages</h4>
+                  <h4>Real Estate.</h4>
                   <div class="icon"><img src="images/service-icon-03.png" alt=""></div>
                   <p style="color: black;">Feel free to use this template for your business</p>
                 </div>
                 <div class="item">
-                  <h4>Optimizing Speed for your web pages</h4>
+                  <h4>Health Care.</h4>
                   <div class="icon"><img src="images/service-icon-04.png" alt=""></div>
                   <p style="color: black;" >Get to know more about the topic in details</p>
                 </div>
                 <div class="item">
-                  <h4>Accessibility for mobile viewing</h4>
+                  <h4>Education.</h4>
                   <div class="icon"><img src="images/service-icon-01.png" alt=""></div>
                   <p style="color: black;" >Get to know more about the topic in details</p>
                 </div>
                 <div class="item">
-                  <h4>Content Ideas for your next project</h4>
-                  <div class="icon"><img src="assets/images/service-icon-02.png" alt=""></div>
+                  <h4>Entertainment</h4>
+                  <div class="icon"><img src="images/service-icon-02.png" alt=""></div>
                   <p style="color: black;" >Feel free to use this template for your business</p>
                 </div>
                 <div class="item">
                   <h4>UI &amp; UX Design &amp; Development</h4>
-                  <div class="icon"><img src="assets/images/service-icon-03.png" alt=""></div>
+                  <div class="icon"><img src="images/service-icon-03.png" alt=""></div>
                   <p style="color: black;">Get to know more about the topic in details</p>
                 </div>
                 <div class="item">
                   <h4>Discover the digital marketing trend</h4>
-                  <div class="icon"><img src="assets/images/service-icon-04.png" alt=""></div>
+                  <div class="icon"><img src="images/service-icon-04.png" alt=""></div>
                   <p style="color: black;">Get to know more about the topic in details</p>
                 </div>
               </div>
