--- a/our-services.html
+++ b/our-services.html
@@ -396,15 +396,16 @@ body {
           
           <div class="pricing-table pricing-monthly">
             <div class="pricing-table-header">
-              <h1>Unlimited <strong>Monthly</strong></h1>
-              <h2><strong>Only $34.00</strong> / month</h2>
+              <h1>Monthly </h1>
+              <h2><strong>18,000 INR / 250 USD</strong> / month</h2>
             </div>
             <div class="pricing-table-content">
               <ul class="pricing-details">
-                <li class="pricing-list"><span class="iconicfill-check"></span>Get Unlimited Downloads!</li>
-                <li class="pricing-list"><span class="iconicfill-check"></span>No Download Caps</li>
-                <li class="pricing-list"><span class="iconicfill-check"></span>All 100% Royalty Free</li>
-                <li class="pricing-list"><span class="iconicfill-check"></span>No Contract / Cancel Anytime</li>
+                <li class="pricing-list"><span class="iconicfill-check"></span>Ads Spend - Rs 10,000. It will be paid to ads platform 
+                  </li>
+                <li class="pricing-list"><span class="iconicfill-check"></span>Our Management Fee - 8,000</li>
+                <li class="pricing-list"><span class="iconicfill-check"></span>Account Management - 2</li>
+                <li class="pricing-list"><span class="iconicfill-check"></span>Creation of Campaign - 1</li>
                 <li class="pricing-list"><span class="iconicfill-check"></span>Unbeatable Customer Support</li>
                 <li class="pricing-list"><span class="iconicfill-check"></span>20 - 30 New Uploads Monthly</li>
               </ul>
