--- a/about-us.html
+++ b/about-us.html
@@ -327,7 +327,7 @@
               </div>
               <div class="footer-advanced-aside">
                 <div class="container">
-                  <div class="footer-advanced-layout"><a class="brand" href="index.html"><img src="images/whiteshadow.jpg" alt="" width="115" height="34" srcset="images/whiteshadow.jpg 2x"/></a>
+                  <div class="footer-advanced-layout" ><a class="brand" href="index.html"><img class="logo" src="images/shadow.png" alt="" width="115" height="34" style="border-radius: 12px;" srcset="images/whiteshadow.jpg 2x"/></a>
                     <!-- Rights-->
                     <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span>. All Rights Reserved. Design by <a href="#">Azhar Ahmad</a></p>
                   </div>
