--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     content="width=device-width height=device-height initial-scale=1.0 maximum-scale=1.0 user-scalable=0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta charset="utf-8">
-  <link rel="icon" href="images/whiteshadow.jpg" type="image/x-icon">
+  <link rel="icon" href="images/shadow.png" type="image/x-icon">
   <link rel="stylesheet" type="text/css"
     href="//fonts.googleapis.com/css?family=Work+Sans:300,400,500,700,800%7CPoppins:300,400,700">
   <link rel="stylesheet" type="text/css"
@@ -1087,7 +1087,7 @@
     </div>
     <div class="footer-advanced-aside">
       <div class="container">
-        <div class="footer-advanced-layout"><a class="brand" href="index.html"><img src="images/whiteshadow.jpg" alt=""
+        <div class="footer-advanced-layout"><a class="brand" href="index.html"><img style="border-radius: 14px;" src="images/shadow.jpg" alt=""
               width="115" height="34" srcset="images/whiteshadow.jpg 2x" /></a>
           <!-- Rights-->
           <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span>All Rights Reserved. Design
