--- a/our-services.html
+++ b/our-services.html
@@ -15,10 +15,10 @@
     <style>
       
       /* Fonts */
-/* @import url(https://fonts.googleapis.com/css?family=Lato:300,400,700); */
+@import url(https://fonts.googleapis.com/css?family=Lato:300,400,700);
 
 /* icons */
-/* @import url(http://weloveiconfonts.com/api/?family=iconicfill); */
+@import url(http://weloveiconfonts.com/api/?family=iconicfill);
 
 
 
