--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
         <div class="swiper-pagination swiper-pagination-modern swiper-pagination-marked" data-index-bullet="true"></div>
       </div>
     </section>
-    <div class="clients">
+    <div class="clients" style=" margin-bottom:40px;">
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
@@ -435,7 +435,7 @@
 
 
     <!-- Services -->
-    <section class="section-services " style="margin-top: -25px;">
+    <section class="section-services " style="margin-top: -20px;">
       <div class="container">
         <div class="row justify-content-center text-center">
           <div class="col-md-10 col-lg-8">
@@ -1090,7 +1090,7 @@
         <div class="footer-advanced-layout"><a class="brand" href="index.html"><img style="border-radius: 14px;" src="images/shadow.jpg" alt=""
               width="115" height="34" srcset="images/whiteshadow.jpg 2x" /></a>
           <!-- Rights-->
-          <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span>All Rights Reserved. Design
+          <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span> All Rights Reserved. Design
             by <a href="#">Azhar Ahmad</a></p>
         </div>
       </div>
