--- a/contacts.html
+++ b/contacts.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width height=device-height initial-scale=1.0 maximum-scale=1.0 user-scalable=0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8">
-    <link rel="icon" href="images/whiteshadow.jpg" type="image/x-icon">
+    <link rel="icon" href="images/shadow.png" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Work+Sans:300,400,500,700,800%7CPoppins:300,400,700">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/style.css" id="main-styles-link">
-    <style>.ie-panel{display: none;background: #212121;padding: 10px 0;box-shadow: 3px 3px 5px 0 rgba(0,0,0,.3);clear: both;text-align:center;position: relative;z-index: 1;} html.ie-10 .ie-panel, html.lt-ie-10 .ie-panel {display: block;}</style>
+    <!-- <style>.ie-panel{display: none;background: #212121;padding: 10px 0;box-shadow: 3px 3px 5px 0 rgba(0,0,0,.3);clear: both;text-align:center;position: relative;z-index: 1;} html.ie-10 .ie-panel, html.lt-ie-10 .ie-panel {display: block;}</style> -->
   </head>
   <body>
     <!-- <div class="ie-panel"><a href="http://windows.microsoft.com/en-US/internet-explorer/"><img src="images/ie8-panel/warning_bar_0000_us.jpg" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today."></a></div> -->
@@ -208,7 +208,7 @@
                         <p class="post-inline-title"><a href="#">Real Estate Guide: 7 Important Tips for Buying a Home</a></p>
                         <ul class="post-inline-meta">
                           <li>By Whie Shadow</li>
-                          <li><a href="#">2 days ago</a></li>
+                          <!-- <li><a href="#">2 days ago</a></li> -->
                         </ul>
                       </article>
                       <!-- Post Inline-->
@@ -216,7 +216,7 @@
                         <p class="post-inline-title"><a href="#">Single-Family Homes as a Housing Option for Young Families</a></p>
                         <ul class="post-inline-meta"> 
                           <li>By White Shadow</li>
-                          <li><a href="#">2 days ago</a></li>
+                          <!-- <li><a href="#">2 days ago</a></li> -->
                         </ul>
                       </article>
                     </div>
