media queries error fixed

--- a/index.html
+++ b/index.html
@@ -62,9 +62,8 @@
     }
 
     .project img {
-  /* width: 100%;
-  height: auto; */
-  border-radius: 12px; /* Adjust the value as needed */
+ 
+  border-radius: 12px; 
 }
 
 .project {
