--- a/our-services.html
+++ b/our-services.html
@@ -219,7 +219,7 @@ body {
                 <div class="rd-navbar-panel">
                   <!-- RD Navbar Toggle-->
                   <button class="rd-navbar-toggle" data-rd-navbar-toggle="#rd-navbar-nav-wrap-1"><span></span></button>
-                  <!-- RD Navbar Brand--><a class="rd-navbar-brand" href="/"><img src="images/whiteshadow.jpg" alt="" width="151" height="44" srcset="images/logo-default-151x44.png 2x"/></a>
+                  <!-- RD Navbar Brand--><a class="rd-navbar-brand" href="/"><img src="images/whiteshadow.jpg" alt="" width="151" height="44" srcset="images/whiteshadow.jpg 2x"/></a>
                 </div>
                 <div class="rd-navbar-collapse">
                   <button class="rd-navbar-collapse-toggle rd-navbar-fixed-element-1" data-rd-navbar-toggle="#rd-navbar-collapse-content-1"><span></span></button>
