--- a/our-services.html
+++ b/our-services.html
@@ -401,7 +401,7 @@ body {
             </div>
             <div class="pricing-table-content">
               <ul class="pricing-details">
-                <li class="pricing-list"><span class="iconicfill-check"></span>Ads Spend - Rs 10,000. It will be paid to ads platform 
+                <li class="pricing-list"><span class="iconicfill-check"></span>Ads Spend - Rs 10,000.
                   </li>
                 <li class="pricing-list"><span class="iconicfill-check"></span>Our Management Fee - 8,000</li>
                 <li class="pricing-list"><span class="iconicfill-check"></span>Account Management - 2</li>
@@ -579,12 +579,6 @@ body {
 
 
 
-
-
-
-
-
-<!-- Service End -->
 
 
 
