--- a/index.html
+++ b/index.html
@@ -1133,7 +1133,7 @@
               width="115" height="34" srcset="images/whiteshadow.jpg 2x" /></a>
           <!-- Rights-->
           <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span> All Rights Reserved. Design
-            by <a href="#">Azhar Ahmad</a></p>
+            by <a href="#" style="color:red; font-size: medium;">Azhar Ahmad</a></p>
         </div>
       </div>
     </div>
