--- a/our-services.html
+++ b/our-services.html
@@ -29,12 +29,7 @@
 /* * { margin: 0; padding: 0; box-sizing: border-box; position: relative; } */
 
 
-body {
-  /* background: blue; */
-  /* background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(21,21,179,1) 35%, rgba(0,212,255,1) 100%); */
-  
-  
-}
+
 
 /* layout */
 .wrapper {
@@ -564,7 +559,7 @@ body {
                 <div class="container" >
                   <div class="footer-advanced-layout"><a class="brand" href="index.html"><img style="border-radius: 14px;" src="images/whiteshadow.jpg" alt="" width="100" height="34" srcset="images/whiteshadow.jpg 2x"/></a>
                     <!-- Rights-->
-                    <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span>. All Rights Reserved. Design by <a href="#">Azhar Ahmad</a></p>
+                    <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span>All Rights Reserved. Design by <a href="#">Azhar Ahmad</a></p>
                   </div>
                 </div>
               </div>
