--- a/about-us.html
+++ b/about-us.html
@@ -102,9 +102,10 @@
       <!-- Working at CaseCraft-->
       
       <div class="about-section">
-        <div class="inner-container">
+        <div class="inner-container" style="background: linear-gradient(90deg, rgba(0,212,255,1) 0%, rgba(21,21,179,1) 35%, rgba(2,0,36,1) 100%);">
           <h1>About Us</h1>
-          <p class="text">
+          
+          <p class="text" style="color: whitesmoke;">
             We are committed to delivering measurable and impactful results that align with your business goals. Our strategies are data-driven, innovative, and tailored to your specific needs.With extensive experience across various sectors, we understand the unique challenges and opportunities your industry faces. Our knowledge and insights enable us to develop targeted campaigns that resonate with your audience.We believe in the power of creativity to break through the clutter and captivate audiences. Our team of talented creatives will bring fresh ideas and innovative approaches to your campaigns.
           </p>
           <!-- <div class="skills">
