--- a/about-us.html
+++ b/about-us.html
@@ -179,7 +179,7 @@
           </div>
         </div>
       </section>
-      <section class="section novi-background section-lg text-center">
+      <section class="section novi-background section-lg text-center" style="background: linear-gradient(to right, #240b36,#1a1cbe);">
         <div class="container">
           <h3 class="text-uppercase wow-outer"><span class="wow slideInUp">Our Team</span></h3>
           <div class="row row-50 row-xxl-70 justify-content-center justify-content-lg-start">
@@ -249,7 +249,7 @@
       <!-- Page Footer-->
       <!-- <a class="banner" href="https://www.templatemonster.com/intense-multipurpose-html-template.html" target="_blank"><img src="images/intense_big_02.jpg" alt=""/>
       </a> -->
-            <footer class="section novi-background footer-advanced bg-gray-700">
+            <footer class="section novi-background footer-advanced bg-gray-700" >
               <div class="footer-advanced-main">
                 <div class="container">
                   <div class="row row-50">
