--- a/our-services.html
+++ b/our-services.html
@@ -542,11 +542,12 @@
                     </div>
                     <div>
                       <ul class="foter-social-links list-inline list-inline-md">
-                        <li><a class="icon novi-icon icon-sm link-default mdi mdi-facebook" href="#"></a></li>
-                        <li><a class="icon novi-icon icon-sm link-default mdi mdi-twitter" href="#"></a></li>
-                        <li><a class="icon novi-icon icon-sm link-default mdi mdi-instagram" href="#"></a></li>
-                        <li><a class="icon novi-icon icon-sm link-default mdi mdi-google" href="#"></a></li>
-                        <li><a class="icon novi-icon icon-sm link-default mdi mdi-linkedin" href="#"></a></li>
+                        <li><a class="icon novi-icon icon-sm link-default mdi mdi-facebook" href="https://www.facebook.com/profile.php?id=100094526196648"></a></li>
+                        <!-- <li><a class="icon novi-icon icon-sm link-default mdi mdi-twitter" href="#"></a></li> -->
+                        <li><a class="icon novi-icon icon-sm link-default mdi mdi-instagram"
+                            href="https://www.instagram.com/whiteshadownetwork1/"></a></li>
+                        <li><a class="icon novi-icon icon-sm link-default mdi mdi-google" href="https://www.google.com/search?q=white+shadow+network&rlz=1C5CHFA_enIN1086__1086&oq=white&gs_lcrp=EgZjaHJvbWUqCAgBEEUYJxg7MgwIABBFGDkYsQMYgAQyCAgBEEUYJxg7Mg8IAhAAGEMYsQMYgAQYigUyFQgDEC4YQxjHARixAxjRAxiABBiKBTIMCAQQABhDGIAEGIoFMgYIBRBFGD0yBggGEEUYPDIGCAcQRRg80gEIMzA4M2owajeoAgCwAgA&sourceid=chrome&ie=UTF-8"></a></li>
+                        <li><a class="icon novi-icon icon-sm link-default mdi mdi-linkedin" href="https://in.linkedin.com/in/white-shadow-885887284"></a></li>
                       </ul>
                     </div>
                   </div>
