view button fixed

--- a/index.html
+++ b/index.html
@@ -1243,7 +1243,7 @@
     <div class="project-info">
       <p>${project.description}</p>
       <div class="project-btns">
-        <a href="${project.view}" target="_blank"><button>Live</button></a>
+        <a href="${project.view}" target="_blank"><button>View</button></a>
         
       </div>
     </div>
