--- a/index.html
+++ b/index.html
@@ -1055,8 +1055,8 @@
           <div class="col-sm-5 col-md-7 col-lg-4">
             <h5 class="font-weight-bold text-uppercase text-white">Gallery</h5>
             <div class="row row-x-10" data-lightgallery="group">
-              <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/gallery-original-1.jpg"
-                  data-lightgallery="item"><img class="thumbnail-minimal-image" src="images/footer-gallery-1-85x85.jpg"
+              <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/nathu.jpeg"
+                  data-lightgallery="item"><img class="thumbnail-minimal-image" src="images/nathu.jpeg"
                     alt="" />
                   <div class="thumbnail-minimal-caption"></div>
                 </a></div>
