box shadow added

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
     .project img {
  
-  border-radius: 12px; 
+  border-radius: 10px; 
 }
 
 .project {
@@ -74,6 +74,7 @@
 }
 
     .project {
+      box-shadow: rgba(206, 9, 9, 0.35) 30px 30px 30px;
       /* border: yellow; */
       border-radius: 12px;
       border: 12px;
@@ -88,16 +89,17 @@
       left: 0;
       right: 0;
       background-color: transparent;
-      width: 90%;
-      height: 80%;
+      width: 100%;
+      height: 100%;
       margin: auto;
       display: flex;
       justify-content: center;
       align-items: center;
       flex-direction: column;
       text-align: center;
-      color: purple;
+      color:   #0b5be6 ;
       opacity: 0;
+      font-weight: 800;
     }
 
     .project-info:hover {
@@ -1147,20 +1149,14 @@
     const projectsArray = [
     {
         img: "images/f.jpeg",
-        description: "Project 3: Speedo fitness club | Pampore",
+        description: "Project 1: Speedo fitness club | Pampore",
         view: "https://youtu.be/mNJbwbYinwg?si=oND___F8tONdYTSj",
         // code: "https://github.com/example/project3",
         tag: "fullstack",
       },
+      
       {
-        img: "images/kings.jpeg",
-        description: "Project 11: Vlcc Pampore",
-        view: "https://www.instagram.com/vlccpamporeofficial/",
-        // code: "https://github.com/example/project1",
-        tag: "design",
-      },
-      {
-        img: "images/nathu.jpeg",
+        img: "images/n.jpeg",
         description: "Project 2: Nathu’s Sweets And Restaurent",
         view: "https://www.instagram.com/nathus_sweets_/",
         // code: "https://github.com/example/project2",
@@ -1176,21 +1172,21 @@
       },
       {
         img: "images/jeep.jpeg",
-        description: "Project 3: Campas jeep trail hawk | Superior | lahol spitty.",
+        description: "Project 4: Campas jeep trail hawk | Superior | lahol spitty.",
         view: "https://youtu.be/9vyOAkBiqQU?si=LRZTEVFDAoKhibOB",
         // code: "https://github.com/example/project3",
         tag: "fullstack",
       },
       {
         img: "images/rise1.webp",
-        description: "Project 3: O2 Rise Water",
+        description: "Project 5: O2 Rise Water",
         view: "https://youtu.be/W7cvj9VGn0I?si=d81RYso49y6NYrof",
         // code: "https://github.com/example/project3",
         tag: "fullstack",
       },
       {
         img: "images/dil.jpeg",
-        description: "Project 3: Doud Dilas | Ishfaq kawa | Shakshi Holkar.",
+        description: "Project 6: Doud Dilas | Ishfaq kawa | Shakshi Holkar.",
         view: "https://youtu.be/UOu0IIMDC3g?si=rRuOo_S11968bnnk",
         // code: "https://github.com/example/project3",
         tag: "vanilla",
@@ -1204,24 +1200,31 @@
       },
       {
         img: "images/panin.jpeg",
-        description: "Project 3: Panin Gunah | Faiz A | Gautam N | Aabid Ali",
+        description: "Project 7: Panin Gunah | Faiz A | Gautam N | Aabid Ali",
         view: "https://youtu.be/m1K5-eBFt74?si=UHEQv1BpzrRxVkiy",
         // code: "https://github.com/example/project3",
         tag: "vanilla",
       },
       {
         img: "images/raman1.jpeg",
-        description: "Project 3: Pyar kardi | Raman Goyal | sandy",
+        description: "Project 8: Pyar kardi | Raman Goyal | sandy",
         view: "https://youtu.be/BzZ_mIr9c8E?si=E5zde3ed93yKMXPE",
         // code: "https://github.com/example/project3",
         tag: "vanilla",
       },
       {
         img: "images/sapna.jpeg",
-        description: "Project 3: Supna | Raman Goyal | Yuvraj Hans | Sandy",
+        description: "Project 9: Supna | Raman Goyal | Yuvraj Hans | Sandy",
         view: "https://youtu.be/9m35_4W2vo8?si=Z1boq2hi79zsw7Qm",
         // code: "https://github.com/example/project3",
         tag: "vanilla",
+      },
+      {
+        img: "images/vlc.jpeg",
+        description: "Project 10: Vlcc Pampore",
+        view: "https://www.instagram.com/vlccpamporeofficial/",
+        // code: "https://github.com/example/project1",
+        tag: "design",
       },
       
 
