--- a/about-us.html
+++ b/about-us.html
@@ -102,8 +102,8 @@
       <!-- Working at CaseCraft-->
       
       <div class="about-section">
-        <div class="inner-container" style="background: linear-gradient(90deg, rgba(0,212,255,1) 0%, rgba(21,21,179,1) 35%, rgba(2,0,36,1) 100%);">
-          <h1>About Us</h1>
+        <div class="inner-container" style="background: linear-gradient(90deg, rgba(21,21,179,1) 35%, rgba(2,0,36,1) 100%);">
+          <h1 style="color: wheat;">About Us</h1>
           
           <p class="text" style="color: whitesmoke;">
             We are committed to delivering measurable and impactful results that align with your business goals. Our strategies are data-driven, innovative, and tailored to your specific needs.With extensive experience across various sectors, we understand the unique challenges and opportunities your industry faces. Our knowledge and insights enable us to develop targeted campaigns that resonate with your audience.We believe in the power of creativity to break through the clutter and captivate audiences. Our team of talented creatives will bring fresh ideas and innovative approaches to your campaigns.
@@ -143,13 +143,14 @@
                 <div class="counter-minimal-main">
                   <div class="counter">12</div>
                 </div>
-                <h5 class="counter-minimal-title">Experineces Staff</h5>
+                <h5 class="counter-minimal-title">Experineced Staff</h5>
               </article>
             </div>
             <div class="col-6 col-md-3 wow-outer">
               <!-- Counter Minimal-->
               <article class="counter-minimal wow slideInUp" data-wow-delay=".1s">
-                <div class="counter-minimal-icon box-chloe__icon novi-icon linearicons-home-icon3"></div>
+                <div class="counter-minimal-icon box-chloe__icon novi-icon linearicons-users2"></div>
+                <!-- <div class="counter-minimal-icon box-chloe__icon novi-icon linearicons-home-icon3"></div> -->
                 <div class="counter-minimal-main">
                   <div class="counter">238</div>
                 </div>
